gccida/c1/visit_expression
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:712:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v9; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:727:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v24; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:728:4: error: expected ';' after expression
rtx const_value; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:728:5: error: use of undeclared identifier 'const_value'
rtx const_value; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:729:4: error: expected ';' after expression
rtx v26; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:729:5: error: use of undeclared identifier 'v26'
rtx v26; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:737:4: error: expected ';' after expression
rtx v34; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:737:5: error: use of undeclared identifier 'v34'
rtx v34; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:738:4: error: expected ';' after expression
rtx v35; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:738:5: error: use of undeclared identifier 'v35'
rtx v35; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:743:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:743:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:748:4: error: expected ';' after expression
rtx v45; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:748:5: error: use of undeclared identifier 'v45'
rtx v45; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:749:4: error: expected ';' after expression
rtx v46; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:749:5: error: use of undeclared identifier 'v46'
rtx v46; // r8 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:750:4: error: expected ';' after expression
rtx v47; // r9 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:750:5: error: use of undeclared identifier 'v47'
rtx v47; // r9 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/ssa-ccp.c:759:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v56; // ebx 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/visit_expression/src/obj/ssa-ccp.o] Error 1
